--- a/src/Carousel/style.css
+++ b/src/Carousel/style.css
@@ -5,7 +5,6 @@ ul{
     list-style: none;
     width: 100%;
     display: flex;
-    cursor: pointer;
 }
 
 li{
@@ -25,4 +24,6 @@ li{
     overflow: hidden;
     width: 100%;
     margin: auto;
+    border-radius: 3px;
+    position: relative;
 }
