--- a/src/Carousel/components/Pagination/style.css
+++ b/src/Carousel/components/Pagination/style.css
@@ -8,6 +8,7 @@
     padding: 3px;
     border-radius: 3px;
     background-color: rgba(255, 255, 255, 0.6);
+    font-family: sans-serif;
 }
 
 .pg_cell {
