--- a/src/Carousel/style.css
+++ b/src/Carousel/style.css
@@ -1,4 +1,4 @@
-ul{
+.slider_container{
     margin: 0;
     padding: 0;
     position: relative;
@@ -7,24 +7,23 @@ ul{
     display: flex;
 }
 
-li{
+.slider_cell{
     flex-direction: column;
     flex-flow: column;
     margin: 0;
     position: relative;
-    background: rgba(0, 0, 0, 0.2);
     list-style: none;
     color: white;
-    height: 600px;
     min-width: 100%;
     overflow: hidden;
 }
 
-.wrapper {
+.slider_wrapper {
     overflow: hidden;
     width: 100%;
     margin: auto;
     border-radius: 3px;
+    background-color: rgba(0,0,0,0.2);
     position: relative;
 }
 
