--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,46 @@ body{
     margin: 0;
 }
 
+.page_wrapper{
+    max-width: 1400px;
+    margin: auto;
+    padding: 0 10px 0 10px;
+}
+
+header{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px solid  rgb(94, 193, 255);
+}
+
+header a{
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+}
+
+header a:hover{
+    color:rgb(94, 193, 255);
+}
+
+.example_container{
+    border-bottom: 3px solid  rgb(94, 193, 255);
+    margin-bottom: 30px;
+}
+
+.example_container:last-child{
+    border-bottom: none;
+}
+
+.example_carousel_item {
+    height: 500px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
 .full_size{
     width: 100%;
     height: 100%;
@@ -16,4 +56,65 @@ body{
     position: absolute;
     top: 0;
     margin: 7px;
+}
+
+
+
+
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  animation-fill-mode: both;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  color:  rgb(94, 193, 255);
+  font-size: 10px;
+  margin: auto;
+  position: relative;
+  transform: translateZ(0);
+  animation-delay: -0.16s;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }
